// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Dashboard Actions Check if "changePuchasesAction" was dispatched 1`] = `
Array [
  Object {
    "payload": Array [
      Object {
        "cashbackPercentage": 0.01,
        "cashbackValue": 1,
        "date": "2021-04-01T08:15:30-03:00",
        "id": 123,
        "price": 100,
        "status": "Approved",
      },
      Object {
        "cashbackPercentage": 0.01,
        "cashbackValue": 1,
        "date": "2021-04-01T08:11:30-03:00",
        "id": 123,
        "price": 50,
        "status": "Validating",
      },
      Object {
        "cashbackPercentage": 0.01,
        "cashbackValue": 1,
        "date": "2021-04-01T08:19:30-03:00",
        "id": 123,
        "price": 30,
        "status": "Rejected",
      },
    ],
    "type": "CHANGE_PURCHASES",
  },
]
`;

exports[`Test Dashboard Actions Check if "fetchPurchasesAction" was dispatched 1`] = `
Array [
  Object {
    "type": "FETCH_PURCHASES",
  },
]
`;

exports[`Test Dashboard Actions Check if "fetchPurchasesErrorAction" was dispatched 1`] = `
Array [
  Object {
    "payload": true,
    "type": "FETCH_PURCHASES_ERROR",
  },
]
`;
